<resources>
    <string name="app_name">TrailKeeper</string>

    <!-- Google Play Service -->
    <string name="google_app_id">701660176212</string>

    <!-- google admob test ad -->
    <!--<string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>-->
    <!-- google admob production ad -->
    <string name="banner_ad_unit_id">ca-app-pub-9150360740164586/8069526951</string>

    <!-- test devices MotoX-->
    <string name="TEST_DEVICE_ID">ABECD4A0D0276144E5A4D2F92512946D</string>

    <!-- Privacy Policy -->
    <string name="PRIVACY_POLICY_LINK">https://www.iubenda.com/privacy-policy/7787521</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_find_trail">Find Trail</string>
    <string name="title_activity_trail_admin">Trail Admin</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_trail_screen">TrailScreen</string>
    <string name="title_activity_comments">Comments</string>
    <string name="title_activity_trail_map">TrailMap</string>

    <!-- drawer -->
    <string name="home">Home</string>
    <string name="find_trail">Find Trail</string>
    <string name="comments">Comments</string>
    <string name="map">Map</string>
    <string name="add_trail">Add Trail</string>
    <string name="create_group">Create Group</string>
    <string name="trail_subscriptions">Trail Subscriptions</string>
    <string name="account_settings">Account Settings</string>
    <string name="request_trail_pin">Get Trail Pin</string>
    <string name="contact_us">Contact Us</string>

    <string name="trail_admin">Trail Admin</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="trail_status">Trail Status</string>
    <string name="latest_comments">Latest Comments</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="choose_trail">Choose Trail</string>

    <!-- Parse Stuff -->
    <string name="ApplicationID">"uU8JsEF9eLEYcFzUrwqmrWzblj65IoQ0G6S4DkI8"</string>
    <string name="ClientKEey">"4S7u2tedpm9yeE6DR3J6mDyJHHpgmUgktu6Q6QvD"</string>
    <string name="title_activity_home_screen">HomeScreen</string>

    <!-- Trail Screen -->
    <string name="button_home">Home</string>
    <string name="button_map">Map</string>
    <string name="trail_status_label">Trail Status:</string>

    <!-- sign up screen -->
    <string name="welcome_title">Welcome!</string>
    <string name="welcome_message">Would you like to sign up for a free account?
                \n\nWith an active account you will be able to use more of the TrailKeeper functions!</string>
    <string name="button_not_yet">Not yet</string>
    <string name="button_sign_up">Sign up</string>
    <string name="snackbar_settings_reminder">Go to Settings to sign up anytime</string>

    <!-- Snackbar no GPS -->
    <string name="snackbar_no_signal">Please turn On GPS to see trails near you, and refresh</string>
    <string name="title_activity_create_account">Create Account</string>
    <string name="email_hint">Email</string>

    <!-- snackbar settings screen -->
    <string name="snackbar_alreadysignedin_create_account">You are already signed in, no need to create an account</string>
    <string name="snackbar_alreadysignedin_login">You are already signed in</string>
    <string name="snackbar_alreadysignedin_logout">You are not signed in</string>
    <string name="snackbar_alreadysignedin_delete_account">You are not signed in, nothing to delete</string>
    <string name="snackbar_notifications_signin">Please sign in first</string>

    <!-- Settings Screen -->
    <string name="sign_out_confirm">Are you sure you want to sign out?</string>
    <string name="sign_out_cancel">Cancel</string>
    <string name="sign_out_yes">Yes</string>
    <string name="delete_account_confirm">Are you really sure you want to totally delete your account?</string>

    <!-- Create Account Screen -->
    <string name="username_hint">User Name</string>
    <string name="password_hint">Password</string>
    <string name="signup_btn_text">Sign Up</string>
    <string name="create_account_failure">We failed to create your account, \nPlease try again</string>
    <string name="snackbar_invalid_email">Please enter a vaild email address</string>
    <string name="snackbar_invalid_username">Please enter a valid user name longer than 6 digits</string>
    <string name="snackbar_invalid_password">Please enter a vaild password longer than 8 digits</string>
    <string name="title_activity_sign_in">Sign In</string>

    <!-- sign in screen -->
    <string name="sign_in">Sign In</string>
    <string name="reset_password">Reset Password</string>
    <string name="find_username">Find Username</string>
    <string name="send_email">Send Email</string>
    <string name="title_activity_update_account">Update Account</string>

    <string name="update_account_title">Sign In To Update Account</string>
    <string name="update_email">Update Email</string>
    <string name="verify_email">Verify Email</string>
    <string name="update_username">Update Username</string>
    <string name="update_password">Update Password</string>
    <string name="title_activity_account_settings">Account Settings</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="expand_state">Expand State Trails</string>
    <string name="trail_name_hint">Trail Name</string>
    <string name="btn_go">Go</string>
    <string name="btn_refresh">Refresh</string>
    <string name="btn_okay">Okay</string>
    <string name="dialog_welcome_title">Welcome!</string>
    <string name="dialog_welcome_messageone">Would You Like To Sign Up For A Free Account?</string>
    <string name="dialog_welcome_message_two">With An Active Account You Will Be Able To Use More Of The TrailKeeper Functions!</string>
    <string name="dialog_not_yet">Not Yet</string>
    <string name="dialog_sign_up">Sign Up</string>
    <string name="btn_show_comments">All Comments</string>
    <string name="btn_all_comments">Leave Comment</string>
    <string name="btn_save">Save</string>
    <string name="edittext_new_comment">New Comment</string>
    <string name="title_activity_all_comments">All Comments</string>
    <string name="set_trail_status">Set Trail Status</string>
    <string name="trail_pin_hint">Trail Pin</string>
    <string name="radio_button_open">Open</string>
    <string name="radio_button_closed">Closed</string>
    <string name="radio_button_unknown">Unknown</string>
    <string name="title_activity_add_trail">Add Trail</string>
    <string name="create_new_trail">Create</string>
    <string name="private_trail_switch">Private Trail:</string>
    <string name="checkbox_hard">Hard</string>
    <string name="use_current_location_switch">Use Current Location:</string>
    <string name="medium_checkbox">Medium</string>
    <string name="easy_checkbox">Easy</string>
    <string name="skill_level_view">Skill Level:</string>
    <string name="country_hint">Country</string>
    <string name="state_hint">State</string>
    <string name="city_hint">City</string>
    <string name="trailName_hint">Trail Name</string>
    <string name="title_activity_get_trail_pin">TrailPin</string>

    <string name="hello_world">Hello world!</string>
    <string name="get_pin">Get Pin</string>
    <string name="request_pin_text">In order to ensure only the correct users are changing the status of a trail, we
                                    ask that you provide us with your name, trail name, and explanation why you are qualified to changes the trail status -
                                    Owner, Admin, Park Manager, etc... After receiving your request, we will email you the trail pin within 24 hours.</string>
    <string name="reason_text">Reason</string>
    <string name="name_string">Name</string>
    <string name="title_activity_contact">Contact</string>
    <string name="contact_text">Contact us</string>
    <string name="feedback_text">Feedback</string>
    <string name="button_send_email">Send Email</string>
    <string name="sure_sign_out">Are you sure you want to sign out?</string>
    <string name="delete_account">Are you sure you want to totally delete your account?</string>
    <string name="not_signed_in">Not Signed In</string>
    <string name="user">Welcome&#160;</string>
    <string name="no_trail_map">No trail map for this location. Let us know if you have one we can add.</string>

    <!-- global unit screen -->
    <string name="imperial">Imperial</string>
    <string name="metric">Metric</string>
    <string name="save">Save</string>
    <string name="trail_home">Trail Home</string>
    <string name="trail_location">Trail Location</string>
    <string name="subscribe_to_trail">Subscribe to Trail</string>


</resources>
