<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@android:color/white">

    <Button
        android:id="@+id/btn_trailHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/button_text_medium"
        android:textColor="@color/accent"
        style="?android:attr/borderlessButtonStyle"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:layout_gravity="center"
        android:text="@string/trail_home"/>

    <Button
        android:id="@+id/btn_TrailMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/button_text_medium"
        android:textColor="@color/accent"
        style="?android:attr/borderlessButtonStyle"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:layout_gravity="center"
        android:text="@string/trail_location"/>

    <Button
        android:id="@+id/btn_subscribeToTrail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/button_text_medium"
        android:textColor="@color/accent"
        style="?android:attr/borderlessButtonStyle"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:layout_gravity="center"
        android:text="@string/subscribe_to_trail"/>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/button_text_medium"
        android:textColor="@color/accent"
        style="?android:attr/borderlessButtonStyle"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:layout_gravity="center"
        android:text="@string/sign_out_cancel"/>

</LinearLayout>