<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/trail_status_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|start"
        android:textColor="@color/primary_text"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_medium"
        android:text="@string/set_trail_status"/>

    <EditText
        android:id="@+id/edit_text_pin"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="4dp"
        android:hint="@string/trail_pin_hint"
        android:textColorHint="@color/secondary_text"
        android:drawableStart="@mipmap/ic_action_accounts"
        android:drawableLeft="@mipmap/ic_action_accounts"
        android:background="@android:color/white"/>

    <View
        android:id="@+id/view1"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/black"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio_button_open"
            android:layout_marginBottom="8dp"
            android:id="@+id/status_open"
            android:enabled="false"/>

        <ImageView
            android:id="@+id/trail_status_open"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/status_open"
            android:contentDescription="@string/trail_status"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio_button_closed"
            android:id="@+id/status_closed"
            android:layout_marginBottom="8dp"
            android:enabled="false"/>

        <ImageView
            android:id="@+id/trail_status_closed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/status_closed"
            android:contentDescription="@string/trail_status"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio_button_unknown"
            android:id="@+id/status_unknown"
            android:layout_marginBottom="8dp"
            android:enabled="false"/>

        <ImageView
            android:id="@+id/trail_status_caution"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/status_caution"
            android:contentDescription="@string/trail_status"/>

    </LinearLayout>

</LinearLayout>