<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_title"
            android:text="@string/dialog_welcome_title"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txt_message"
            android:text="@string/dialog_welcome_messageone"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text_size_small"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txt_message_two"
            android:text="@string/dialog_welcome_message_two"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text_size_small"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp">

            <Button
                android:id="@+id/btn_not_yet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/button_all"
                android:textColor="@color/accent"
                style="?android:attr/borderlessButtonStyle"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:layout_marginEnd="8dp"
                android:layout_toStartOf="@+id/btn_okay"
                android:text="@string/dialog_not_yet"/>

            <Button
                android:id="@+id/btn_okay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/button_all"
                android:textColor="@color/accent"
                style="?android:attr/borderlessButtonStyle"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:layout_alignParentEnd="true"
                android:text="@string/dialog_sign_up"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>