<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_message"
            android:text="@string/delete_account"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text_size_small"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/button_text_small"
                android:textColor="@color/accent"
                style="?android:attr/borderlessButtonStyle"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:layout_marginEnd="8dp"
                android:layout_toStartOf="@+id/btn_yes"
                android:text="@string/sign_out_cancel"/>

            <Button
                android:id="@+id/btn_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/button_text_small"
                android:textColor="@color/accent"
                style="?android:attr/borderlessButtonStyle"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:layout_alignParentEnd="true"
                android:text="@string/sign_out_yes"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>