<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.singlecog.trailkeeper.Activites.GetTrailPin"
    android:background="@drawable/bg_create_account"
    android:id="@+id/layout1">

    <android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/create_account_card_view"
                android:layout_gravity="center"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                card_view:cardUseCompatPadding="true"
                card_view:cardElevation="4dp"
                card_view:cardCornerRadius="4dp"
                android:visibility="visible">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:paddingTop="10dp"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:background="@android:color/white">

                    <TextView
                        android:id="@+id/pin_text"
                        style="@style/TextViewMedium"
                        android:textColor="@color/secondary_text"
                        android:text="@string/request_pin_text"
                        android:layout_margin="8dp"/>

                    <EditText
                        android:id="@+id/edittext_name"
                        style="@style/EditTextRegular"
                        android:padding="10dp"
                        android:inputType="textCapWords"
                        android:nextFocusDown="@+id/edittext_trail_name"
                        android:hint="@string/name_string"/>

                    <View
                        android:id="@+id/view1"
                        style="@style/ViewStyle"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"/>

                    <AutoCompleteTextView
                        android:id="@+id/edittext_trail_name"
                        style="@style/EditTextRegular"
                        android:padding="10dp"
                        android:imeOptions="actionNext"
                        android:nextFocusDown="@+id/edittext_email"
                        android:hint="@string/trail_name_hint"
                        android:inputType="textAutoComplete"/>

                    <View
                        android:id="@+id/view2"
                        style="@style/ViewStyle"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"/>

                    <EditText
                        android:id="@+id/edittext_email"
                        style="@style/EditTextRegular"
                        android:layout_marginTop="2dp"
                        android:padding="10dp"
                        android:nextFocusDown="@+id/edittext_reason"
                        android:hint="@string/email_hint"
                        android:inputType="textEmailAddress"/>

                    <View
                        android:id="@+id/view3"
                        style="@style/ViewStyle"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"/>

                    <EditText
                        android:id="@+id/edittext_reason"
                        style="@style/EditTextRegular"
                        android:layout_marginTop="2dp"
                        android:padding="10dp"
                        android:inputType="textCapSentences"
                        android:hint="@string/reason_text"/>

                    <View
                        android:id="@+id/view4"
                        style="@style/ViewStyle"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp">

                        <Button
                            android:id="@+id/btn_get_pin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/button_text_small"
                            android:textColor="@color/accent"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:minHeight="0dp"
                            android:minWidth="0dp"
                            android:text="@string/get_pin"/>

                    </RelativeLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <include layout="@layout/nav_drawer"/>

    </android.support.v4.widget.DrawerLayout>

</RelativeLayout>
