<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.singlecog.trailkeeper.Activites.SignIn"
    android:background="@drawable/bg_create_account">

    <android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/create_account_card_view"
                android:layout_gravity="center"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                card_view:cardUseCompatPadding="true"
                card_view:cardElevation="4dp"
                card_view:cardCornerRadius="4dp"
                android:visibility="visible">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:padding="10dp">

                    <EditText
                        android:id="@+id/edittext_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-2dp"
                        android:padding="10dp"
                        android:hint="@string/username_hint"
                        android:textColorHint="@color/secondary_text"
                        android:drawableLeft="@mipmap/ic_action_person"
                        android:drawableStart="@mipmap/ic_action_person"/>

                    <EditText
                        android:id="@+id/edittext_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-2dp"
                        android:padding="10dp"
                        android:hint="@string/password_hint"
                        android:textColorHint="@color/secondary_text"
                        android:inputType="textPassword"
                        android:drawableLeft="@mipmap/ic_action_accounts"
                        android:drawableStart="@mipmap/ic_action_accounts"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Button
                            android:id="@+id/btn_sign_up"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/button_text_medium"
                            android:textColor="@color/accent"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:text="@string/sign_in"/>

                    </RelativeLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <include layout="@layout/nav_drawer"/>

    </android.support.v4.widget.DrawerLayout>

</RelativeLayout>
